[Fix] 퀴즈 생성 후 List<Long>으로 id값 반환