@@ -15,6 +15,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.reactive.function.client.WebClient;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -26,7 +27,7 @@ public class QuizGenerateService {
     private final NewsRepository newsRepository;
     private final WebClient webClient;
 
-    public void generateQuiz(Long newsId) {
+    public List<Long> generateQuiz(Long newsId) {
         News news = newsRepository.findById(newsId).orElseThrow(() ->
                 new EntityNotFoundException("뉴스를 찾을 수 없습니다"));
 
@@ -38,8 +39,12 @@ public class QuizGenerateService {
                 .block();
 
         List<QuizResponseDTO.QuizGenerateResponseDTO> quizList = responseDto.getQuizList();
-        List<Quiz> quizzes = quizList.stream().map(QuizConverter::toQuizEntity)
-                .toList();
-        quizRepository.saveAll(quizzes);
-        log.info("뉴스 ID {}로부터 {}개의 퀴즈가 성공적으로 생성 및 저장되었습니다.", newsId, quizzes.size());    }
+        List<Quiz> saved = quizRepository.saveAll(quizList.stream().map(QuizConverter::toQuizEntity)
+                .toList());
+        log.info("뉴스 ID {}로부터 {}개의 퀴즈가 성공적으로 생성 및 저장되었습니다.", newsId, saved.size());
+        return saved.stream()
+                .map(Quiz::getId)
+                .collect(Collectors.toList());
+
+    }
 }
